# ai-memory-vault

./: .gitignore  README.md  package-lock.json  pyproject.toml
Felex 资料/带个人语言风格的论文和政策文件/: 武光提案-借力南京自贸片区建设契机，打造国际化技能型人才开放高地-2020.12.15.docx  武光提案-加快江北新区科创园布局，促进科技创新协同发展-2018.01.05.docx  武光提案-提高企业国际产能创新合作，深化一带一路交汇点建设-2019.01.05.docx  武光提案-深化多元化人才安居建设力度，提升南京引才留才氛围-2021.12.23.docx  送审论文-基于BIM的化工钢结构协同管理平台技术研究.docx
Felex 资料/研发课题季度计划/: 定稿Rev.3-立项报告-基于BIM技术与智能算法融合的石化管道预制焊接排产系统研发.docx  研发课题清单 2023-2025.xlsx
memory/domains/career/: role_definition.md  work_history.md
memory/domains/collaboration/: ai_expectations.md  commit_workflow.md  document_export_formatting_rule.md  malaysia_biodiesel_content_engineering.md  memory_impact_review_workflow.md  multi_device_knowledge_workflow.md  ppt_style_and_notes_analysis_project_workshare_planning.md  project_output_dual_track.md  repo_boundary_rules.md  report_writing_style.md  (+5 more)
memory/imports/: 科技成果申请表-更新.md  苏安协【2026】14号_关于开展2026年度安装领域科技成果评价活动的通知.md
memory/profiles/: classification.md  conversation_tags.md  domain_registry.md  preferences.md  user.md
memory/snapshots/: active_context.md
scripts/: batch_push_untracked.sh  dingtalk_fetch_logs.py  extract_pdf_text.swift  generate_pipeline_topic_ppt.js  generate_pipeline_topic_ppt_academy.js
src/ai_memory/: __init__.py  cli.py  storage.py
templates/: ai_expectations.md  commit_workflow.md  context_philosophy.md  conversation_tags.md  long_term_goals.md  pipeline_digitalization.md  role_definition.md  traceable_response_style.md  work_history.md  writing_style.md
(+293 files in other folders)
