[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-memory-vault"
version = "0.1.0"
description = "Git-based memory vault for important AI conversations."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "felex" }
]

[project.scripts]
memory-vault = "src.ai_memory.cli:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
